Renamed variables to more suitable names and added functionality, when clicked on a link of the navbar on mobile, hides the links (because there are no longer useful)

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,10 +1,10 @@
-.show-navlinks-mobile{
+.hide-navlinks-mobile{
 
     display: none;
 
 }
 
-.show-user-mobile{
+.hide-user-mobile{
 
     display: none;
 
